<resources>
    <string name="app_name">Customer App</string>
    <string name="register">Register</string>
    <string name="register_name">Name</string>
    <string name="register_nif">NIF</string>
    <string name="register_credit_card_information">Credit Card Information</string>
    <string name="register_type">Type</string>
    <string name="register_visa">Visa</string>
    <string name="register_mastercard">MasterCard</string>
    <string name="register_american_express">American Express</string>
    <string name="register_number">Number</string>
    <string name="register_validity">Validity</string>
    <string name="register_register">Register</string>
    <string name="casa_da_musica">Casa da Música</string>
    <string name="update">Update</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="purchase">Purchase</string>
    <string name="order">Order</string>
    <string name="m_order">Make Order</string>
    <string name="validate">Validate</string>
    <string name="example">Example</string>
    <string name="image_of_the_concert">Image Of the concert</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="icon_of_the_option">Icon Of the option</string>
    <string name="image_of_the_product">Image of the product</string>
    <string name="show_this_screen_to_the_professional">Show this screen to the professional</string>
    <string name="image_of_the_qr_code">image of the qr code</string>
    <string name="how_many_tickets">How many tickets?</string>
    <string name="choose_products">Choose Products</string>
    <string name="ok">Ok</string>
    <string name="total">Total:</string>
</resources>
